--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "styled-components": "~4.4.1",
+    "styled-media-helper": "~2.0.0",
     "styled-normalize": "~8.0.6"
   },
   "scripts": {
